Add content audit and indexing stats tracking
Introduce automated content audit and centralized indexing stats tracking. Added a new audit endpoint (/audit/{source}) and async audit task that discovers content, resolves locales/environments, creates NOT_PROCESSED records, prunes stale records, and records DRY_SCAN stats. Moved indexing stats lifecycle into DumConnectorIndexingService with trackIndexingStart/completeIndexingStats and a pending-stats map; DumConnectorApi now invokes tracking instead of saving stats inline. Extended repository and service APIs to support environment-aware unprocessed record handling and provider-level counts (grouped by source). AEM plugin now exposes resolveLocale/resolveEnvironments and checks model.json availability. Also small fixes: ensure finish() runs in finally in IndexingExecutor, add status key constant, return types simplified in monitoring endpoints, and minor imports/refactorings.